--- a/le_config.json
+++ b/le_config.json
@@ -1,29 +1,10 @@
 {
-    "Hotkeys": {
-        "eject_dll": {
-            "enabled": false,
-            "keys_combination": [
-                35,
-                0,
-                0
-            ]
-        },
-        "hide_ui_keys": {
-            "enabled": true,
-            "keys_combination": [
-                120,
-                0,
-                0
-            ]
-        },
-        "show_menu_keys": {
-            "enabled": true,
-            "keys_combination": [
-                122,
-                0,
-                0
-            ]
-        }
+    "Lua": {
+        "collect_lua_states": false,
+        "execute_in_all_states": false
+    },
+    "Other": {
+        "show_player_potential": true
     },
     "Logger": {
         "log_game_logs": false,
@@ -33,13 +14,19 @@
         "log_load_file": false,
         "luaL_tolstring": false
     },
-    "Lua": {
-        "collect_lua_states": false,
-        "execute_in_all_states": false
-    },
-    "Other": {
-        "first_run": false,
-        "show_player_potential": true
+    "Hotkeys": {
+        "show_menu_keys": {
+            "enabled": true,
+            "keys_combination": [ 122, 0, 0 ]
+        },
+        "hide_ui_keys": {
+            "enabled": true,
+            "keys_combination": [ 120, 0, 0 ]
+        },
+        "eject_dll": {
+            "enabled": false,
+            "keys_combination": [ 35, 0, 0 ]
+        }
     },
     "Overlay": {
         "corner": 0,
